Web help pages: fix vertical alignment problem in syntax table   some other minor tweaks.

--- a/web/jmdict.css
+++ b/web/jmdict.css
@@ -36,3 +36,7 @@
 
 /* other */
 .helplink	{font-size: 75%;}
+table.syntable	{border: 1px solid black; border-collapse:collapse;}
+td.syntable     {vertical-align:top; border: 1px solid black;
+		 cellpadding:2; cellspacing:2;}
+
